[gd_scene load_steps=59 format=2]

[ext_resource path="res://Assets novos/Design sem nome (9).png" type="Texture" id=1]
[ext_resource path="res://Assets novos/Terreno .png" type="Texture" id=2]
[ext_resource path="res://Assets novos/Rodovia.png" type="Texture" id=3]
[ext_resource path="res://Scripts/caminhaoUnipar.gd" type="Script" id=4]
[ext_resource path="res://Scripts/cenaPrincipal.gd" type="Script" id=5]
[ext_resource path="res://Assets novos/PixelSplitter-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Cenas/Pause.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/carrinho.gd" type="Script" id=8]
[ext_resource path="res://Assets novos/carrinho.png" type="Texture" id=9]
[ext_resource path="res://Assets novos/Grass FD 4.png" type="Texture" id=10]
[ext_resource path="res://Assets novos/image6.png" type="Texture" id=11]
[ext_resource path="res://Assets novos/image7.png" type="Texture" id=12]
[ext_resource path="res://Assets novos/image5.png" type="Texture" id=13]
[ext_resource path="res://Assets novos/image9.png" type="Texture" id=14]
[ext_resource path="res://Assets novos/image8.png" type="Texture" id=15]
[ext_resource path="res://Assets novos/seta esquerda.png" type="Texture" id=16]
[ext_resource path="res://Assets novos/image.png" type="Texture" id=17]
[ext_resource path="res://Assets novos/Seta Direita.png" type="Texture" id=18]
[ext_resource path="res://Assets novos/Tecla Esc Feita.png" type="Texture" id=19]
[ext_resource path="res://Assets novos/buraco.png" type="Texture" id=20]
[ext_resource path="res://Scripts/buraco.gd" type="Script" id=21]
[ext_resource path="res://Assets novos/vida 3.png" type="Texture" id=22]
[ext_resource path="res://Assets novos/vida 0.png" type="Texture" id=23]
[ext_resource path="res://Assets novos/vida 1.png" type="Texture" id=24]
[ext_resource path="res://Assets novos/vida 2.png" type="Texture" id=25]
[ext_resource path="res://Assets novos/vida 4.png" type="Texture" id=26]
[ext_resource path="res://Musicas/somDoMotor.wav" type="AudioStream" id=27]
[ext_resource path="res://Musicas/turbo_sound.mp3" type="AudioStream" id=28]
[ext_resource path="res://Musicas/car_crash_glass.mp3" type="AudioStream" id=29]
[ext_resource path="res://Assets novos/PLaca de atenção Feito.png" type="Texture" id=30]
[ext_resource path="res://Assets novos/tree.png" type="Texture" id=31]
[ext_resource path="res://Scripts/coluna1Direita.gd" type="Script" id=32]
[ext_resource path="res://Scripts/coluna2Direita.gd" type="Script" id=33]
[ext_resource path="res://Scripts/coluna1esquerda.gd" type="Script" id=34]
[ext_resource path="res://Scripts/coluna1esquerda2.gd" type="Script" id=35]
[ext_resource path="res://Assets novos/pixil-frame-0 (14).png" type="Texture" id=36]
[ext_resource path="res://Scripts/coluna3Direita.gd" type="Script" id=37]
[ext_resource path="res://Assets novos/Som Feito.png" type="Texture" id=38]
[ext_resource path="res://Assets novos/Som Mudo Feito.png" type="Texture" id=39]
[ext_resource path="res://Assets novos/vazio.png" type="Texture" id=40]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 64 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 100
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 70
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=17]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AnimatedTexture" id=6]
frames = 4
frame_1/delay_sec = 0.0
frame_2/delay_sec = 0.0
frame_3/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "Velocímetro",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.0
height = 66.0

[sub_resource type="CircleShape2D" id=8]
radius = 28.0

[node name="Node2D" type="Node2D"]
pause_mode = 2
position = Vector2( -3, 0 )
script = ExtResource( 5 )

[node name="coluna1Direita" type="KinematicBody2D" parent="."]
pause_mode = 1
script = ExtResource( 32 )

[node name="arvore" type="Sprite" parent="coluna1Direita"]
position = Vector2( 1374, 134 )
texture = ExtResource( 31 )

[node name="arvore2" type="Sprite" parent="coluna1Direita"]
position = Vector2( 1380, -262 )
texture = ExtResource( 31 )

[node name="arvore3" type="Sprite" parent="coluna1Direita"]
position = Vector2( 1374, 503 )
texture = ExtResource( 31 )

[node name="arvore4" type="Sprite" parent="coluna1Direita"]
position = Vector2( 1368, -688 )
texture = ExtResource( 31 )

[node name="coluna2Direita" type="KinematicBody2D" parent="."]
pause_mode = 1
position = Vector2( 200, 0 )
script = ExtResource( 33 )

[node name="arvore" type="Sprite" parent="coluna2Direita"]
position = Vector2( 1374, 134 )
texture = ExtResource( 31 )

[node name="arvore2" type="Sprite" parent="coluna2Direita"]
position = Vector2( 1434, -424 )
texture = ExtResource( 31 )

[node name="arvore3" type="Sprite" parent="coluna2Direita"]
position = Vector2( 1374, 503 )
texture = ExtResource( 31 )

[node name="arvore4" type="Sprite" parent="coluna2Direita"]
position = Vector2( 1494, -880 )
texture = ExtResource( 31 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="RodoviaLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 8000 )

[node name="Rodovia" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 70.0
margin_right = 559.0
margin_bottom = 170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia2" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 1070.0
margin_right = 559.0
margin_bottom = 1170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia3" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 2070.0
margin_right = 559.0
margin_bottom = 2170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia4" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 3070.0
margin_right = 559.0
margin_bottom = 3170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia5" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 4070.0
margin_right = 559.0
margin_bottom = 4170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia6" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 5070.0
margin_right = 559.0
margin_bottom = 5170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia7" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 6070.0
margin_right = 559.0
margin_bottom = 6170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Rodovia8" type="TextureRect" parent="ParallaxBackground/RodoviaLayer"]
margin_left = 459.0
margin_top = 7070.0
margin_right = 559.0
margin_bottom = 7170.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="TerrenoELayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 10000 )

[node name="Terreno" type="TextureRect" parent="ParallaxBackground/TerrenoELayer"]
margin_left = -1041.0
margin_top = 2.0
margin_right = -1026.0
margin_bottom = 73.0
rect_scale = Vector2( 100, 100 )
texture = ExtResource( 2 )

[node name="Terreno2" type="TextureRect" parent="ParallaxBackground/TerrenoELayer"]
margin_left = -1041.0
margin_top = 7098.0
margin_right = -1026.0
margin_bottom = 7170.0
rect_scale = Vector2( 100, 100 )
texture = ExtResource( 2 )

[node name="TerrenoDLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 7100 )

[node name="Terreno3" type="TextureRect" parent="ParallaxBackground/TerrenoDLayer"]
margin_left = 1459.0
margin_top = 3.0
margin_right = 1474.0
margin_bottom = 74.0
rect_scale = Vector2( 100, 100 )
texture = ExtResource( 2 )

[node name="Terreno4" type="TextureRect" parent="ParallaxBackground/TerrenoDLayer"]
margin_left = 1459.0
margin_top = 7097.0
margin_right = 1474.0
margin_bottom = 7168.0
rect_scale = Vector2( 100, 100 )
texture = ExtResource( 2 )

[node name="pauseMask2" type="CanvasModulate" parent="ParallaxBackground"]
pause_mode = 2
physics_interpolation_mode = 2
process_priority = 1
visible = false
color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="GramaELayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 7168 )

[node name="GrassFd4" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 71.0
margin_right = 639.0
margin_bottom = 1095.0
texture = ExtResource( 10 )

[node name="GrassFd5" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 1095.0
margin_right = 639.0
margin_bottom = 2119.0
texture = ExtResource( 10 )

[node name="GrassFd6" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 2119.0
margin_right = 639.0
margin_bottom = 3143.0
texture = ExtResource( 10 )

[node name="GrassFd7" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 3143.0
margin_right = 639.0
margin_bottom = 4167.0
texture = ExtResource( 10 )

[node name="GrassFd8" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 4167.0
margin_right = 639.0
margin_bottom = 5191.0
texture = ExtResource( 10 )

[node name="GrassFd9" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 5191.0
margin_right = 639.0
margin_bottom = 6215.0
texture = ExtResource( 10 )

[node name="GrassFd10" type="TextureRect" parent="ParallaxBackground/GramaELayer"]
margin_left = -385.0
margin_top = 6215.0
margin_right = 639.0
margin_bottom = 7239.0
texture = ExtResource( 10 )

[node name="GramaDLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 7168 )

[node name="GrassFd4" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 69.0
margin_right = 2303.0
margin_bottom = 1093.0
texture = ExtResource( 10 )

[node name="GrassFd5" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 1093.0
margin_right = 2303.0
margin_bottom = 2117.0
texture = ExtResource( 10 )

[node name="GrassFd6" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 2117.0
margin_right = 2303.0
margin_bottom = 3141.0
texture = ExtResource( 10 )

[node name="GrassFd7" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 3141.0
margin_right = 2303.0
margin_bottom = 4165.0
texture = ExtResource( 10 )

[node name="GrassFd8" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 4165.0
margin_right = 2303.0
margin_bottom = 5189.0
texture = ExtResource( 10 )

[node name="GrassFd9" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 5189.0
margin_right = 2303.0
margin_bottom = 6213.0
texture = ExtResource( 10 )

[node name="GrassFd10" type="TextureRect" parent="ParallaxBackground/GramaDLayer"]
margin_left = 1279.0
margin_top = 6213.0
margin_right = 2303.0
margin_bottom = 7237.0
texture = ExtResource( 10 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
pause_mode = 1
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1247.57, 396 )
shape = SubResource( 1 )

[node name="CaminhãoUnipar" type="Sprite" parent="KinematicBody2D/CollisionShape2D"]
position = Vector2( 0.5, 1 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="turboFlutter" type="AudioStreamPlayer2D" parent="KinematicBody2D/CollisionShape2D/CaminhãoUnipar"]
stream = ExtResource( 28 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
pause_mode = 2
position = Vector2( 1127, 543 )
z_index = 10
offset = Vector2( 0, -500 )
current = true
smoothing_enabled = true
smoothing_speed = 40.0

[node name="Pause" parent="KinematicBody2D/Camera2D" instance=ExtResource( 7 )]
pause_mode = 2
visible = false
light_mask = 16
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -234.0
margin_top = -824.0
margin_right = -234.0
margin_bottom = -824.0

[node name="Label" type="Label" parent="KinematicBody2D/Camera2D"]
visible = false
margin_left = -939.0
margin_top = -1024.0
margin_right = 935.0
margin_bottom = -879.0
custom_fonts/font = SubResource( 5 )
text = "Lista de comandos (teclado)"
align = 1

[node name="SetaDireita" type="Sprite" parent="KinematicBody2D/Camera2D/Label"]
position = Vector2( 1289, 335 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 18 )

[node name="SetaEsquerda" type="Sprite" parent="KinematicBody2D/Camera2D/Label"]
position = Vector2( 1292, 138 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 16 )

[node name="TeclaEsc" type="Sprite" parent="KinematicBody2D/Camera2D/Label"]
position = Vector2( 1328, 611 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 19 )

[node name="TeclaEspaco" type="Sprite" parent="KinematicBody2D/Camera2D/Label"]
position = Vector2( 1380, 816 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 17 )

[node name="Label1" type="Label" parent="KinematicBody2D/Camera2D/Label"]
margin_left = -18.0
margin_top = 170.0
margin_right = 1131.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 10 )
text = "Mover para a esquerda"
align = 2

[node name="Label2" type="Label" parent="KinematicBody2D/Camera2D/Label"]
margin_left = -21.0
margin_top = 364.0
margin_right = 1127.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 10 )
text = "mover para a direita"
align = 2

[node name="Label3" type="Label" parent="KinematicBody2D/Camera2D/Label"]
margin_left = -17.0
margin_top = 570.0
margin_right = 1124.0
margin_bottom = 646.0
custom_fonts/font = SubResource( 10 )
text = "pausar o jogo"
align = 2

[node name="Label4" type="Label" parent="KinematicBody2D/Camera2D/Label"]
margin_left = -13.0
margin_top = 768.0
margin_right = 1127.0
margin_bottom = 844.0
custom_fonts/font = SubResource( 10 )
text = "Garantir Pontos"
align = 2

[node name="Label5" type="Label" parent="KinematicBody2D/Camera2D/Label"]
margin_left = -18.0
margin_top = 944.0
margin_right = 1895.0
margin_bottom = 1015.0
custom_fonts/font = SubResource( 12 )
text = "Pressione qualquer tecla para continuar"
align = 1

[node name="garantirPontos" type="Button" parent="KinematicBody2D/Camera2D"]
visible = false
margin_left = -488.0
margin_top = -585.0
margin_right = 514.0
margin_bottom = -462.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 11 )
text = "Garantir pontos"
flat = true

[node name="continuar" type="Button" parent="KinematicBody2D/Camera2D/garantirPontos"]
margin_left = -462.0
margin_top = -447.0
margin_right = -183.0
margin_bottom = -359.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 13 )
text = "voltar"
flat = true
align = 0

[node name="alerta" type="RichTextLabel" parent="KinematicBody2D/Camera2D/garantirPontos"]
margin_left = -342.0
margin_top = 230.0
margin_right = 1341.0
margin_bottom = 613.0
custom_fonts/mono_font = SubResource( 14 )
custom_fonts/bold_italics_font = SubResource( 15 )
custom_fonts/italics_font = SubResource( 16 )
custom_fonts/bold_font = SubResource( 17 )
custom_fonts/normal_font = SubResource( 18 )
text = "              clique em garantir pontos para que seus pontos sejam salvos.
              Caso deseje continuar na sua viagem clique em voltar, mas lembrando que seus pontos ficaram igual a zero se perder.
"
scroll_active = false

[node name="PLacaDeAtençãoFeito" type="Sprite" parent="KinematicBody2D/Camera2D/garantirPontos"]
position = Vector2( -265, 226 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 30 )

[node name="volumeAtivo" type="TextureButton" parent="KinematicBody2D/Camera2D"]
pause_mode = 2
visible = false
margin_left = 835.0
margin_top = -1034.0
margin_right = 1235.0
margin_bottom = -630.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 38 )
texture_disabled = ExtResource( 40 )

[node name="volumeMudo" type="TextureButton" parent="KinematicBody2D/Camera2D"]
pause_mode = 2
visible = false
margin_left = 827.0
margin_top = -1044.0
margin_right = 1263.0
margin_bottom = -561.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 39 )
texture_disabled = ExtResource( 40 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = 1144.0
margin_top = 524.0
margin_right = 1247.0
margin_bottom = 554.0
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 3 )
text = "Pontos"
uppercase = true

[node name="barraDeVida" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D/barraDeVida"]
position = Vector2( 202.5, -251.5 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 9 )

[node name="velocimetro" type="Sprite" parent="KinematicBody2D"]
texture = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D/velocimetro"]
position = Vector2( 1936, 453 )
scale = Vector2( 4, 4 )
frames = SubResource( 7 )
animation = "Velocímetro"

[node name="somDoMotor" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
position = Vector2( 1127, 543 )
stream = ExtResource( 27 )
volume_db = 17.0

[node name="carrinho" type="KinematicBody2D" parent="."]
pause_mode = 1
position = Vector2( 875, -430 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="carrinho"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="carrinho/Area2D"]
position = Vector2( 36, -41 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="carrinho/Area2D/CollisionShape2D"]
position = Vector2( 1, 1 )
scale = Vector2( 3.3125, 3.5 )
texture = ExtResource( 9 )

[node name="Area2D2" type="Area2D" parent="carrinho"]
position = Vector2( -881, -398 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="carrinho/Area2D2"]
position = Vector2( 807, -72 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="carrinho/Area2D2/CollisionShape2D"]
position = Vector2( 1, 1 )
scale = Vector2( 3.3125, 3.5 )
texture = ExtResource( 9 )

[node name="Area2D3" type="Area2D" parent="carrinho"]
position = Vector2( -230, -700 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="carrinho/Area2D3"]
position = Vector2( 40, -41 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="carrinho/Area2D3/CollisionShape2D"]
position = Vector2( 1, 1 )
scale = Vector2( 3.3125, 3.5 )
texture = ExtResource( 9 )

[node name="pauseMask" type="ColorRect" parent="carrinho/Area2D3/CollisionShape2D/Sprite"]
visible = false
margin_left = -2500.0
margin_top = -3000.0
margin_right = 2500.0
margin_bottom = 3000.0
mouse_filter = 2
color = Color( 0.156863, 0.156863, 0.156863, 0.784314 )

[node name="batidaDeCarro" type="AudioStreamPlayer2D" parent="carrinho"]
position = Vector2( -875, 430 )
stream = ExtResource( 29 )

[node name="buraco" type="KinematicBody2D" parent="."]
z_index = -1
script = ExtResource( 21 )

[node name="Area2D" type="Area2D" parent="buraco"]
position = Vector2( 31, -2000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buraco/Area2D"]
position = Vector2( 991, 168 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 8 )

[node name="Buraco" type="Sprite" parent="buraco/Area2D/CollisionShape2D"]
position = Vector2( 2, 1 )
texture = ExtResource( 20 )

[node name="Area2D2" type="Area2D" parent="buraco"]
position = Vector2( 145, -1500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buraco/Area2D2"]
position = Vector2( 988, 168 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 8 )

[node name="Buraco" type="Sprite" parent="buraco/Area2D2/CollisionShape2D"]
position = Vector2( 2, 1 )
texture = ExtResource( 20 )

[node name="Area2D3" type="Area2D" parent="buraco"]
position = Vector2( 250, -2500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buraco/Area2D3"]
position = Vector2( 988, 168 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 8 )

[node name="Buraco" type="Sprite" parent="buraco/Area2D3/CollisionShape2D"]
position = Vector2( 2, 1 )
texture = ExtResource( 20 )

[node name="pauseMask2" type="ColorRect" parent="buraco/Area2D3/CollisionShape2D/Buraco"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7767.0
margin_top = -11605.0
margin_right = 7684.0
margin_bottom = 4706.0
mouse_filter = 2
color = Color( 0.156863, 0.156863, 0.156863, 0.784314 )

[node name="coluna1esquerda" type="KinematicBody2D" parent="."]
show_behind_parent = true
script = ExtResource( 34 )

[node name="arvore" type="Sprite" parent="coluna1esquerda"]
position = Vector2( 451, 290 )
texture = ExtResource( 31 )

[node name="arvore2" type="Sprite" parent="coluna1esquerda"]
position = Vector2( 241, 25 )
texture = ExtResource( 31 )

[node name="arvore3" type="Sprite" parent="coluna1esquerda"]
position = Vector2( 133, 443 )
texture = ExtResource( 31 )

[node name="arvore4" type="Sprite" parent="coluna1esquerda"]
position = Vector2( 517, -239 )
texture = ExtResource( 31 )

[node name="coluna1esquerda2" type="KinematicBody2D" parent="."]
show_behind_parent = true
script = ExtResource( 35 )

[node name="arvore" type="Sprite" parent="coluna1esquerda2"]
position = Vector2( 403, -531 )
texture = ExtResource( 31 )

[node name="arvore2" type="Sprite" parent="coluna1esquerda2"]
position = Vector2( 127, -718 )
texture = ExtResource( 31 )

[node name="arvore3" type="Sprite" parent="coluna1esquerda2"]
position = Vector2( 427, -996 )
texture = ExtResource( 31 )

[node name="arvore4" type="Sprite" parent="coluna1esquerda2"]
position = Vector2( 139, -293 )
texture = ExtResource( 31 )

[node name="coluna3Esquerda" type="KinematicBody2D" parent="."]
z_index = -10
script = ExtResource( 37 )

[node name="pedra" type="Sprite" parent="coluna3Esquerda"]
position = Vector2( 1500, 327 )
scale = Vector2( 2.375, 2.28125 )
texture = ExtResource( 36 )

[node name="pedra2" type="Sprite" parent="coluna3Esquerda"]
position = Vector2( 1774, -38 )
scale = Vector2( 2.8125, 2.48438 )
texture = ExtResource( 36 )

[node name="pedra3" type="Sprite" parent="coluna3Esquerda"]
position = Vector2( 1506, -305 )
scale = Vector2( 2.65625, 2.29688 )
texture = ExtResource( 36 )

[node name="pedra4" type="Sprite" parent="coluna3Esquerda"]
position = Vector2( 1658, -678 )
scale = Vector2( 2.5625, 2.5 )
texture = ExtResource( 36 )

[node name="coluna3Direita2" type="KinematicBody2D" parent="."]
z_index = -10
script = ExtResource( 37 )

[node name="pedra" type="Sprite" parent="coluna3Direita2"]
position = Vector2( 228, 262 )
scale = Vector2( 2.375, 2.28125 )
texture = ExtResource( 36 )

[node name="pedra2" type="Sprite" parent="coluna3Direita2"]
position = Vector2( 442, -98 )
scale = Vector2( 2.8125, 2.48438 )
texture = ExtResource( 36 )

[node name="pedra3" type="Sprite" parent="coluna3Direita2"]
position = Vector2( 226, -416 )
scale = Vector2( 2.65625, 2.29688 )
texture = ExtResource( 36 )

[node name="pedra4" type="Sprite" parent="coluna3Direita2"]
position = Vector2( 356, -663 )
scale = Vector2( 2.5625, 2.5 )
texture = ExtResource( 36 )

[connection signal="pressed" from="KinematicBody2D/Camera2D/garantirPontos" to="." method="_on_garantirPontos_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/garantirPontos/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/volumeAtivo" to="." method="_on_volumeAtivo_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/volumeMudo" to="." method="_on_volumeMudo_pressed"]
[connection signal="input_event" from="carrinho" to="carrinho" method="_on_carrinho_input_event"]
[connection signal="body_entered" from="carrinho/Area2D" to="carrinho" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="carrinho/Area2D2" to="carrinho" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="carrinho/Area2D3" to="carrinho" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="buraco/Area2D" to="buraco" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="buraco/Area2D2" to="buraco" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="buraco/Area2D3" to="buraco" method="_on_Area2D3_body_entered"]
